Internals de Netty y Event Loop en Java 21
Updated the document to reflect the latest architecture and performance optimizations in Netty with Java 21, including virtual threads and enhanced metrics.